[package]
name = "wbm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
clap_derive = { version = "4.0" }
nix = { version = "0.28.0", features = ["ptrace", "fs"] }
num-traits = "0.2"
num-derive = "0.4"
